# termframe

./: .gitignore  .taplo.toml  Cargo.toml  README.md  askama.toml  cliff.toml  flake.nix  hl-prom.ansi  justfile  one-dark.css  tombi.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  nix-update.yml  publish.yml  release.yml  update-themes.yml  update.yml
assets/: config.toml
assets/test/input/: color-table.ansi  lsd.ansi  sample.ansi
assets/themes/: .aliases.json  .rsync-exclude  0x96f.yaml  3024 Day.yaml  Aardvark Blue.yaml  AlienBlood.yaml  Apple Classic.yaml  Apple System Colors.yaml  Argonaut.yaml  Arthur.yaml  AtelierSulphurpool.yaml  Aurora.yaml  Ayu Mirage.yaml  Batman.yaml  Belafonte Day.yaml  BirdsOfParadise.yaml  Blazer.yaml  Blue Matrix.yaml  BlueBerryPie.yaml  BlueDolphin.yaml  Broadcast.yaml  Builtin Dark.yaml  Builtin Light.yaml  Builtin Pastel Dark.yaml  Builtin Solarized Light.yaml  CLRS.yaml  Calamity.yaml  Chalk.yaml  ChallengerDeep.yaml  Ciapre.yaml  Cobalt Neon.yaml  CutiePro.yaml  Cyberdyne.yaml  CyberpunkScarletProtocol.yaml  Dark Modern.yaml  Dark+.yaml  Darkside.yaml  Dimidium.yaml  Django.yaml  DjangoRebornAgain.yaml  (+136 more)
assets/window-styles/: compact.toml  macos.toml
nix/: binary-hashes.nix  binary-package.nix  cargo-hashes.nix  package.nix
schema/json/: config.schema.json  theme.schema.json  window-style.schema.json
scripts/: cargo-update-filter.sh  color-table.sh  sample  sample.sh
src/: appdirs.rs  cache.rs  cli.rs  command.rs  config.rs  error.rs  font.rs  fontformat.rs  help.rs  lib.rs  main.rs  parse.rs  render.rs  suggest.rs  syntax.rs  term.rs  theme.rs  xerr.rs
src/assets/: config.yaml  style.html
src/assets/themes/: .aliases.json  0x96f.yaml  3024 Day.yaml  3024 Night.yaml  Aardvark Blue.yaml  Abernathy.yaml  Adventure.yaml  AdventureTime.yaml  Adwaita Dark.yaml  Adwaita.yaml  Afterglow.yaml  Alabaster.yaml  AlienBlood.yaml  Andromeda.yaml  Apple Classic.yaml  Apple System Colors Light.yaml  Apple System Colors.yaml  Ardoise.yaml  Argonaut.yaml  Arthur.yaml  AtelierSulphurpool.yaml  Atom.yaml  AtomOneDark.yaml  AtomOneLight.yaml  Aura.yaml  Aurora.yaml  Ayu Mirage.yaml  Banana Blueberry.yaml  Batman.yaml  Belafonte Day.yaml  Belafonte Night.yaml  BirdsOfParadise.yaml  Blazer.yaml  Blue Matrix.yaml  BlueBerryPie.yaml  BlueDolphin.yaml  BlulocoDark.yaml  BlulocoLight.yaml  Borland.yaml  Breeze.yaml  (+358 more)
src/assets/window-styles/: compact.yaml  macos.yaml
src/cli/: tests.rs
src/command/: tests.rs
src/config/: load.rs  mode.rs  tests.rs  theme.rs  types.rs  winstyle.rs
src/config/load/: tests.rs
src/config/types/: dimension.rs  dimension_with_default.rs  dimension_with_initial.rs  range.rs  snap.rs  stepped_range.rs
src/config/types/dimension/: tests.rs
src/config/types/dimension_with_initial/: tests.rs
src/config/types/range/: tests.rs
src/config/types/snap/: tests.rs
src/config/types/stepped_range/: tests.rs
src/error/: tests.rs
src/font/: tests.rs
src/fontformat/: tests.rs
src/help/: tests.rs
src/render/: png.rs  svg.rs  tests.rs  tracing.rs
src/render/svg/: tests.rs
src/render/tracing/: tests.rs
src/syntax/: tests.rs
src/term/: tests.rs
src/theme/: tests.rs
src/ureqmw/: cache.rs
src/xerr/: suggest.rs  tests.rs
src/xerr/suggest/: tests.rs
templates/styles/: font-face.css  screen.css  theme.css
tests/: cli_tests.rs  config_tests.rs  font_tests.rs  render_tests.rs  theme_tests.rs  util_tests.rs
tools/tidy-themes/: Cargo.toml
tools/tidy-themes/examples/: tidy-themes.rs
tools/tidy-themes/src/: lib.rs  main.rs
