[package]
name = "termframe"
authors = ["Pavel Ivanov <mr.pavel.ivanov@gmail.com>"]
description = "Terminal output SVG screenshot tool"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal", "screenshot", "svg"]
version = "0.4.2-alpha.1"
edition = "2024"
license = "MIT"
build = "build/build.rs"

[build-dependencies]
voca_rs = "1"
serde_json = { version = "1" }

[dependencies]
allsorts = "0.15"
anyhow = "1"
askama = "0.13"
base64 = "0.22"
cacache = "13"
clap = { version = "4", features = ["wrap_help", "derive", "env", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
closure = "0.3"
config = { version = "0.15", features = ["yaml", "json", "toml"] }
csscolorparser = { version = "0.7", features = ["serde"] }
dark-light = "2"
dirs = "6"
dirs-sys = "0.5"
env_logger = "0.11"
hex = "0.4"
http = "1"
itertools = "0.14"
known-folders = "1"
log = "0.4"
nu-ansi-term = "0.50"
num-traits = "0.2"
portable-pty = "0.9"
rayon = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yml = "0.0"
shell-escape = "0.1"
strsim = "0.11"
strum = { version = "0.27", features = ["derive"] }
svg = "0.18"
term_size = "0.3"
termwiz = "0.23"
thiserror = "2"
toml = "0.8"
ureq = "3"
url = "2"
voca_rs = "1"
wild = "2"

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", rev = "8ccf6f7c2dd91f8e143998f91e55d1d24a4709bd" }
svg = { git = "https://github.com/pamburus/svg.git", rev = "f9ac3f53d6747d8af57f16d447a7336779ddb722" }
