[package]
name = "termframe"
version = "0.7.5-alpha.2"
edition = "2024"
rust-version = "1.88.0"
description = "Terminal output SVG screenshot tool"
license = "MIT"
keywords = ["cli", "screenshot", "svg", "terminal"]
categories = ["command-line-utilities"]
build = "build/build.rs"
default-run = "termframe"

[workspace]
resolver = "2"
members = [".", "tools/tidy-themes"]
default-members = ["."]

[lib]
name = "termframe"
path = "src/lib.rs"

[[bin]]
name = "termframe"
path = "src/main.rs"

[dependencies]
allsorts = "0.15"
anyhow = "1"
askama = "0.15"
base64 = "0.22"
cacache = "13"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"
closure = "0.3"
config = { version = "0.15", features = ["json", "toml", "yaml"] }
csscolorparser = { version = "0.7", features = ["serde"] }
dark-light = { git = "https://github.com/rust-dark-light/dark-light.git" }
dirs = "6"
dirs-sys = "0.5"
enumset = "1"
enumset-ext = { git = "https://github.com/pamburus/hl.git", rev = "9ba780e0d39288c0b412820599cc9816be980a28", features = [
    "clap",
    "serde"
] }
enumset-serde = { git = "https://github.com/pamburus/hl.git", rev = "9ba780e0d39288c0b412820599cc9816be980a28" }
env_logger = "0.11"
exponential-backoff = "2"
hex = "0.4"
http = "1"
indexmap = "2"
itertools = "0.14"
known-folders = "1"
log = "0.4"
num-integer = "0.1"
num-traits = "0.2"
owo-colors = "4"
portable-pty = "0.9"
rayon = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_plain = "1"
shell-escape = "0.1"
strsim = "0.11"
strum = { version = "0.27", features = ["derive"] }
svg = "0.18"
term_size = "0.3"
termwiz = "0.23"
thiserror = "2"
toml = "0.9"
unicode-width = "0.2"
ureq = "3"
url = "2"
voca_rs = "1"
wild = "2"
yaml-peg = "1"

[build-dependencies]
anyhow = "1"
sha2 = "0.10"
tidy-themes = { path = "tools/tidy-themes" }
ureq = "3"

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", rev = "8ccf6f7c2dd91f8e143998f91e55d1d24a4709bd" }
svg = { git = "https://github.com/pamburus/svg.git", rev = "f9ac3f53d6747d8af57f16d447a7336779ddb722" }
